# chat-server

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
include/environment/: env.h
include/modules/auth/routes/: login_route.h  signup_route.h
include/modules/databases/: mongodb_client.h
include/modules/user/routes/: get_contacts_route.h
src/core/: main.cpp
src/modules/auth/routes/: login_route.cpp  signup_route.cpp
src/modules/databases/mongodb/: mongodb_client.cpp
src/modules/user/routes/: get_contacts_route.cpp
